--- a/public/css/src/rosace/rosace.css
+++ b/public/css/src/rosace/rosace.css
@@ -30,7 +30,7 @@
 .rosace__part.--right {
   top: 0;
   right: 0;
-  background: orange;
+  background: #eee;
   width: 50%;
   height: 100%;
   border-left: 1px solid white;
