--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -69,7 +69,7 @@
   <link rel="stylesheet" href="/css/src/search/search_filters.css">
   <link rel="stylesheet" href="/css/src/seek/seek.css">
   <link rel="stylesheet" href="/css/src/settings/settings.css">
-  <link rel="stylesheet" href="/css/src/shared/shared.css">
+  <!-- <link rel="stylesheet" href="/css/src/shared/shared.css"> -->
   <link rel="stylesheet" href="/css/src/login/login.css">
   <link rel="stylesheet" href="/css/src/map/map.css">
   <link rel="stylesheet" href="/css/src/map/map_mapview.css">
@@ -310,7 +310,7 @@
           </div>
           <div class="menu-item__bar"></div>
         </li>
-        <li class="menu-item --shared" data-link="shared">
+       <!--  <li class="menu-item --shared" data-link="shared">
           <div class="menu-item__body">
             <div class="menu-item__icon --round-icon">
               <i class="icon icon-forward"></i>
@@ -318,7 +318,7 @@
             <h3 data-lid="menu_shared"></h2>
           </div>
           <div class="menu-item__bar"></div>
-        </li>
+        </li> -->
         <li class="menu-item --cheers" data-link="cheers">
           <div class="menu-item__body">
             <div class="menu-item__icon --round-icon">
@@ -484,11 +484,11 @@
 
       
       <!-- Shared begin -->
-      <section class="menu-section --shared" data-link="shared">
+      <!-- <section class="menu-section --shared" data-link="shared">
         <div class="shared">
-          <!-- %% Dynamically injected %%-->
+         
         </div>
-      </section>
+      </section> -->
       <!-- Shared end -->
 
        <!-- Cheers begin -->
@@ -998,7 +998,7 @@
   <script src="js/src/search/search.js"></script>
   <script src="js/src/search/search_filters.js"></script>
   <script src="js/src/settings/settings.js"></script>
-  <script src="js/src/shared/shared.js"></script>
+  <!-- <script src="js/src/shared/shared.js"></script> -->
   <script src="js/src/static/static.js"></script>
   <script src="js/src/login/login.js"></script>
   <script src="js/src/ui/ui.js"></script>
