--- a/public/css/src/app/app_header.css
+++ b/public/css/src/app/app_header.css
@@ -60,7 +60,9 @@
     color: white;
 }
 
-.app__menu-item .bubble {}
+.app__menu-item .bubble {
+    background: #e61515;
+}
 
 .app__menu-item a {
     display: flex;
