--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -8,6 +8,7 @@
     width: 400px;
     box-sizing: border-box;
     box-shadow: 0 0 14px #949494;
+    /* box-shadow: -5px 10px 15px 5px rgba(0,0,0,.1); */
     flex-flow: column nowrap;
 }
 
@@ -108,7 +109,7 @@
     display: flex;
     flex-flow: column;
     position: relative;
-    z-index: -1;
+    z-index: 1;
     outline: none;
     width: 100%;
 }
@@ -254,10 +255,10 @@
 .chat-row-infos-name span {}
 
 .chat-row-infos__name .--name {
-    font-weight: 500;
+    font-weight: 600;
     margin-right: 6px;
     font-size: 13px;
-    letter-spacing: -.5px;
+    letter-spacing: -.3px;
 }
 
 .chat-row-infos__preview {
@@ -343,8 +344,11 @@
     justify-content: center;
     align-items: center;
     padding: 0px 50px;
-    height: 100%;
-    margin-top: 33%;
+    width: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .chat-empty__icon {
@@ -356,10 +360,12 @@
 .chat-empty__icon i {}
 
 .chat-empty__title {
-    font-size: 15px;
+    font-size: 24px;
     color: #454545;
     margin-top: 20px;
     font-weight: 600;
+    font-family: 'creamy';
+    /* color: #1b69ec; */
 }
 
 .chat-empty__title span {}
@@ -384,6 +390,7 @@
     width: 120px;
     margin-bottom: 20px;
     color: #1b69ec;
+    color: #eee;
 }
 
 .chat-empty.--pending .chat-empty__icon {
