--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -28,9 +28,10 @@
 
 .friends .--invite-friends .row-pic {
     font-size: 50px;
-    background: #1b69ec;
+    background: white;
+    color: #1b69ec;
+    border: 2px solid;
     border-radius: 100px;
-    color: white;
 }
 
 .friend__item.--invite-friends h2 {
@@ -54,8 +55,11 @@
     margin: 0 14px 0;
 }
 
-.friend-modal:hover { 
-    background: #eee;
+.friend-modal.--noselect:hover{
+    cursor: not-allowed;
+}
+.friend-modal:hover {
+    background: #fbfbfb;
 }
 
 .friend-modal:last-of-type {
@@ -73,7 +77,7 @@
 .friend-modal__name span {
 }
 
-.item-modal__noselect {color: #DB4760;font-weight: 600;font-size: 12px;margin-left: 10px;}
+.item-modal__noselect {color: #1b69ec;font-weight: 600;font-size: 10px;margin-left: 10px;}
 
 .friend-modal__icon {
     position: absolute;
