--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -40,6 +40,7 @@
 	top: 107px;
 	cursor: pointer;
 	z-index: 10;
+	display: none;
 }
 .map__icon.--create-before:hover {
 	background: rgba(27, 105, 236, 0.75);
