--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -84,8 +84,8 @@
 
 
 .me-item .action {
-    top: 18px;
-    right: 10px;
+    bottom: -26px;
+    right: 0px;
     font-size: 16px;
     color: #191919;
     z-index: 1;
