--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -17,11 +17,11 @@
  
 .settings__title {
     /* text-transform: uppercase; */
-    font-size: 13px;
-    font-weight: 700;
+    font-size: 12px;
+    font-weight: 500;
     text-align: center;
     background: #f7f7f7;
-    padding: 8px 0;
+    padding: 10px 0;
     border-radius: 10px;
 }
 
@@ -36,11 +36,13 @@
 
 .settings-item.--no-border {
     border-bottom: none;
+    margin: 20px 0;
+    padding: 0;
 }
 
 .settings-item .action {
-    top: 18px;
-    right: 10px;
+    bottom: -16px;
+    right: 0px;
     font-size: 20px;
     color: #191919;
     z-index: 1;
@@ -61,9 +63,9 @@
 .settings button.--changelang {
     background: #FFFFFF;
     padding: 10px 50px;
-    color: #FF6767;
+    color: #1b69ec;
     font-size: 12px;
-    border: 1px solid #FF6767;
+    border: 1px dashed;
     font-weight: 600;
     font-family: 'Alegreya sans';
     border-radius: 4px;
