--- a/public/css/src/app/app_ux.css
+++ b/public/css/src/app/app_ux.css
@@ -352,7 +352,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%)!important;
-    width: 40px;
+    width: 32px;
     z-index: 100000;
 }
 
@@ -479,6 +479,16 @@
 }
 .--filterlay {
     background: #af8276!important;
+}
+
+.loader__overlay {
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.66);
+    position: absolute;
+    z-index: 99;
+    top: 0;
+    left: 0;
 }
 
 
