--- a/public/css/src/login/login.css
+++ b/public/css/src/login/login.css
@@ -6,11 +6,23 @@
     text-align: center;
 }
 
+.login__bg {
+    background-image: url('/img/bn/lp1.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-position: center center;
+    opacity: .11;
+    top: 0;
+    left: 0;
+}
+
 .login__progress-bar {
     width: 200px;
     margin: 0 auto;
     height: 3px;
-    background: rgba(27, 105, 236, 0.29);
+    background: rgba(63, 179, 198, 0.18);
     border-radius: 30px;
     margin-top: 20px;
     overflow: hidden;
@@ -20,7 +32,8 @@
     height: 100%;
     width: 0%;
     transition: all ease-in-out .8s;
-    background: #1b69ec;
+    background: #3fb3c6;
+    border-radius: 30px;
 }
 
 .init-location {
@@ -41,15 +54,15 @@
 }
 
 .init-location__subtitle input {
-    padding: 20px 40px;
+    padding: 16px 40px;
     width: 100%;
     box-sizing: border-box;
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
     border: none;
-    background: rgb(25, 25, 25);
+    background: transparent;
     color: #FFF;
-    font-weight: 200;
+    font-weight: 300;
 }
 
 .init-location__splitter {
@@ -59,7 +72,7 @@
     background: #464646;
 }
 
-.init-location__explanation {color: #919191;margin-top: 10px;}
+.init-location__explanation {color: #919191;font-size: 11px;margin-top: 10px;}
 
 .init-location__explanation p {}
 
