--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -29,7 +29,7 @@
 
 
 .me-item label {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 700;
     text-transform: uppercase;
     /* margin-left: 30px; */
@@ -37,8 +37,6 @@
 .me-item input,
 .me-item textarea {
     font-weight: 200;
-    border-radius: 100px;
-    font-size: 20px;
     width: 100%;
     padding: 12px 0px;
     border: 1px solid white;
@@ -47,6 +45,8 @@
     outline: none;
     transition: all ease-out .15s;
     box-sizing: border-box;
+    font-size: 17px;
+    font-family: 'Open sans';
 }
 .menu-section__input {
     padding: 8px 10px 10px 0;
