--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -728,7 +728,14 @@
             <div class="settings-input__explanation" data-lid="settings_ux_auto_login_explanation"></div>
           </div>
           <div class="settings-item">
-            <button class="settings__button --changelang js-changelang" data-lid="settings_ux_changelang_button"></button>
+            <div class="settings-input">
+              <div class="settings-input__icon --round-icon"><i class="icon icon-flag"></i></div>
+              <div class="settings-input-label">
+                <div class="settings-input__label" data-lid="settings_ux_changelang_label"></div>
+              </div>
+               <button class="settings__button --changelang js-changelang" data-lid="settings_ux_changelang_button"></button>
+            </div>
+            <div class="settings-input__explanation" data-lid="settings_ux_changelang_explanation"></div>
           </div>
         </div>
       </section>
