--- a/public/css/src/app/app_layout.css
+++ b/public/css/src/app/app_layout.css
@@ -202,7 +202,7 @@ button:hover {
     align-items: center;
     width: 100%;
     padding-bottom: 0px;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
     padding-bottom: 5px;
 }
 
@@ -532,7 +532,6 @@ button:hover {
 
 
 .change-lang {
-    width: 50%;
     margin: auto;
     display: flex;
     flex-flow: column;
@@ -540,19 +539,6 @@ button:hover {
     align-items: center;
 }
 
-.change-lang__title {
-    color: white;
-    font-size: 60px;
-    font-family: 'creamy';
-    margin-bottom: 15px;
-}
-
-.change-lang__subtitle {
-    color: #919191;
-    font-size: 22px;
-    margin-bottom: 35px;
-    font-weight: 300;
-}
 
 .change-lang__title h2 {}
 
@@ -568,28 +554,24 @@ button:hover {
     justify-content: center;
     align-items: center;
     flex-flow: column;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 60px;
     font-size: 40px;
-    border: 2px solid #454545;
-    border-radius: 200px;
     margin: 0 20px;
 }
 
 .change-lang__choice:hover i{
     opacity: 1;
 }
-.change-lang__choice.--active {
-    border: 2px solid #33afff;
-}
-.change-lang__choice i {cursor: pointer;opacity: .8;transform: scaleX(.85);border-radius: 100px;font-size: 50px;}
+.change-lang__choice.--active {border-bottom: 3px solid #1b69ec;}
+.change-lang__choice.--active i { opacity: 1 }
+.change-lang__choice i {cursor: pointer;opacity: .7;border-radius: 10px 0 10px 0;}
 
-.change-lang__choice.--unavailable {
-    border: 2px solid #232323;
-}
+.change-lang__choice.--unavailable {cursor: not-allowed;opacity: .8;}
+.change-lang__choice.--unavailable i {cursor: not-allowed;}
 .change-lang__choice.--unavailable i {opacity: .2;}
 
-.change-lang__choice .soon {font-size: 14px;position: absolute;bottom: -24px;left: 50%;transform: translate(-50%,0);color: #8A8A8A;font-weight: 300;}
+.change-lang__choice .soon {font-size: 9px;position: absolute;bottom: -10px;left: 50%;transform: translate(-50%,0);color: #454545;font-weight: 600;}
 
 .change-lang__translating {
     color: white;
